--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
   <title>Redirect</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VM2H0M1B6R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VM2H0M1B6R');
+</script>
   <meta http-equiv="refresh" content="0; url=https://lake-mackerel-c31.notion.site/Hi-I-m-Deasty-Jesica-14c990a2061080f6b7fdced0749e9443?pvs=74" />
 </head>
 <body>
